--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <input type="file" id="product-picture" name="product-picture" accept="image/*" required><br>
         
         <button type="Add Product">Add Product</button><br><br>
-        <button type="Show Shop Items">Show Shop Items</button><br>
+        <button type="Show Shop Items">Show shop items</button>
     </form>
 
     <footer>
