--- a/delivery.html
+++ b/delivery.html
@@ -33,11 +33,14 @@
     <div class="container">
         <div class="order">
             <label for="order id">order id:</label>
-            <input type="number" id="order id" placeholder="Enter proudct id">
-            <div class="form-group">
-                <label for="product-details">Product Details:</label>
-                <input type="text" id="product-details" placeholder="Enter product details">
-            </div>
+            <input type="number" id="order id" placeholder="Enter proudct id" required><br>
+                <label for="product Name">Product Name:</label>
+                <input type="text" id="product Name" placeholder="Enter product name" required><br>
+                <label for="product price">Product Price</label>
+                <input type="number" id="product prize" placeholder="Enter Product price" required><br>
+                <label for="quantity">Quantity</label>
+                <input type="text" id="quanity"  placeholder="Enter Product Quanity" required><br>
+        
             <div>
                 <label for="status">Change Status:</label>
                 <select id="status">
@@ -50,5 +53,6 @@
             <button onclick="updateProduct()">Update</button>
         </div>
     </div>
+  
 </body>
 </html>
