--- a/delivery.html
+++ b/delivery.html
@@ -42,7 +42,7 @@
                 <label for="quantity">Quantity</label>
                 <input type="text" id="quanity"  placeholder="Enter Product Quanity" required><br>
             </div> 
-            <div>
+            <div class="form-group">
                 <label for="status">Order Status:</label>
                 <select id="status" name="status" required>
                     <option value="">Select Status</option>
