--- a/delivery.html
+++ b/delivery.html
@@ -7,55 +7,66 @@
     <title>Delivery Details</title>
 </head>
 <body>
-
     <div class="navbar">
         <div class="logo">Fashion Hub</div>
-        
         <div class="search-bar">
             <input type="text" id="search" name="search" placeholder="Search">
-            <button type="button">Search</button><br><br>
+            <button type="button">Search</button>
         </div>
-        
         <div class="account-section">
             <a href="#">Cart</a>
             <div class="dropdown">
                 <a href="#">Account</a>
                 <div class="dropdown-content">
-                    <a href="#">Sign In</a><br>
+                    <a href="#">Sign In</a>
                     <a href="#">Logout</a>
                 </div>
             </div>
         </div>
     </div>
+
+    <table id="deliveryTable">
+        <thead>
+            <tr>
+                <th>Order ID</th>
+                <th>Name</th>
+                <th>Price</th>
+                <th>Place</th>
+                <th>Status</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Rows will be dynamically added here -->
+        </tbody>
+    </table>
+    <button class="add row" onclick="addRow()">Add Row</button>
+
     <footer>
-        Fashion Hub|&copy;2023 All rights reserved
+        Fashion Hub | &copy;2023 All rights reserved
     </footer>
-    <div class="container">
-        <div class="order">
-            <label for="order id">order id:</label>
-            <input type="number" id="order id" placeholder="Enter proudct id" required><br>
-            <div class="form-group">
-                <label for="product Name">Product Name:</label>
-                <input type="text" id="product Name" placeholder="Enter product name" required><br>
-                <label for="product price">Product Price</label>
-                <input type="number" id="product prize" placeholder="Enter Product price" required><br>
-                <label for="quantity">Quantity</label>
-                <input type="text" id="quanity"  placeholder="Enter Product Quanity" required><br>
-            </div> 
-            <div class="form-group">
-                <label for="status">Order Status:</label>
-                <select id="status" name="status" required>
-                    <option value="">Select Status</option>
-                    <option value="Picked Up">Picked Up</option>
-                    <option value="In Transit">In Transit</option>
-                    <option value="Delivered">Delivered</option>
-                    <option value="Pending">Pending</option>
-                    <option value="Cancelled">Cancelled</option>
-                </select>
-            </div>
-            <button onclick="updateProduct()">Update</button>
-        </div>
-    </div>
-  
+
+    <script>
+        function addRow() {
+            const tableBody = document.querySelector("#deliveryTable tbody");
+
+            const newRow = document.createElement("tr");
+            newRow.innerHTML = `
+                <td><input type="number" placeholder="Enter order id"></td>
+                <td><input type="text" placeholder="Enter Name"></td>
+                <td><input type="number" placeholder="Enter Price"></td>
+                <td><input type="text" placeholder="Enter Place"></td>
+                <td>
+                    <select>
+                        <option value="not started">Not Started</option>
+                        <option value="in transit">In-Transit</option>
+                        <option value="delivered">Delivered</option>
+                        <option value="failed">Failed</option>
+                    </select>
+                </td>
+            `;
+
+            tableBody.appendChild(newRow);
+        }
+    </script>
 </body>
 </html>
