--- a/delivery.html
+++ b/delivery.html
@@ -57,6 +57,7 @@
                 <td><input type="text" placeholder="Enter Place"></td>
                 <td>
                     <select>
+                        <option>select</option>
                         <option value="not started">Not Started</option>
                         <option value="in transit">In-Transit</option>
                         <option value="delivered">Delivered</option>
