--- a/delivery.html
+++ b/delivery.html
@@ -28,7 +28,7 @@
     <table id="deliveryTable">
         <thead>
             <tr>
-                <th>Order ID</th>
+                <th>Orderid</th>
                 <th>Name</th>
                 <th>Price</th>
                 <th>Place</th>
