--- a/order.html
+++ b/order.html
@@ -64,7 +64,7 @@
             <input type="number" id="price" required><br>
 
             <label for="payment">Payment</label>
-            <input type="number" id="payment" required><br>
+            <input type="text" id="payment" required><br>
 
             <label for="quantity">Quantity:</label>
             <input type="number" id="quantity" required><br>
